Unreleased

BUGFIXES:

  ZOOKEEPER-1898: ZooKeeper Java cli shell always returns "0" as exit code
  (Abraham Fine via phunt)

  ZOOKEEPER-2477: documentation should refer to Java cli shell and not
  C cli shell (Abraham Fine via phunt)

  ZOOKEEPER-1256: ClientPortBindTest is failing on Mac OS X
  (Camille via phunt)

  ZOOKEEPER-2498: Potential resource leak in C client when processing
  unexpected / out of order response (Michael Han via rgs)

  ZOOKEEPER-2500: Fix compilation warnings for CliException classes
  (Abraham Fine via phunt)

  ZOOKEEPER-2074: Incorrect exit codes for "./zkCli.sh cmd arg"
  (Abraham Fine via phunt)

  Fix command handling in the C client shell (phunt via fpj)

  ZOOKEEPER-2247: Zookeeper service becomes unavailable when leader
  fails to write transaction log (Rakesh via fpj)
  
  ZOOKEEPER-2508: Many ZooKeeper tests are flaky because they proceed
  with zk operation without connecting to ZooKeeper server.
  (Arshad Mohammad via phunt)

  ZOOKEEPER-2152: Intermittent failure in TestReconfig.cc
  (Michael Han via phunt)

  ZOOKEEPER-2548: zooInspector does not start on Windows
  (Arshad Mohammad via phunt)

  ZOOKEEPER-2558: Potential memory leak in recordio.c
  (Michael Han via phunt)

  ZOOKEEPER-1927: zkServer.sh fails to read dataDir (and others)
  from zoo.cfg on Solaris 10 (grep issue, manifests as FAILED TO WRITE PID)
  (Chris Nauroth via rgs)

  ZOOKEEPER-2536: When provide path for 'dataDir' with trailing space,
  it is taking correct path (by trucating space) for snapshot but
  creating temporary file with some junk folder name for
  zookeeper_server.pid (Rakesh Kumar Singh via phunt)

  ZOOKEEPER-2539: Throwing nullpointerException when run the command
  "config -c" when client port is mentioned as separate and not like
  new style (Rakesh Kumar Singh via phunt)

IMPROVEMENTS:

  ZOOKEEPER-2505: Use shared library instead of static library in C
  client unit test (Michael Han via phunt)
